Bug 371703 - Not saving "Sender ID" and "Port" in "Network preferences"
Summary: Not saving "Sender ID" and "Port" in "Network preferences"
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-26 09:40 UTC by Rafael Linux User
Modified: 2016-10-27 06:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Linux User 2016-10-26 09:40:58 UTC
Knotes does not save the "Sender ID" nor "Port". Any time this tab is opened, their values are empty (0 for the port).
Comment 1 Laurent Montel 2016-10-27 06:39:21 UTC
I confirm it.
I will fix it soon.
Comment 2 Laurent Montel 2016-10-27 06:54:40 UTC
Git commit edfee6f3a58b05ff4cbe7e87d8d673c6ba4b789c by Montel Laurent.
Committed on 27/10/2016 at 06:54.
Pushed by mlaurent into branch 'master'.

Fix Bug 371703 - Not saving "Sender ID" and "Port" in "Network preferences"

FIXED-IN: 5.3.3

M  +6    -5    noteshared/src/config/notenetworkconfig.cpp

http://commits.kde.org/knotes/edfee6f3a58b05ff4cbe7e87d8d673c6ba4b789c
Comment 3 Laurent Montel 2016-10-27 06:55:37 UTC
Git commit cbfcd564d0500a109140c98c4b430fb81018c759 by Montel Laurent.
Committed on 27/10/2016 at 06:55.
Pushed by mlaurent into branch 'Applications/16.08'.

Backport fix Bug 371703 - Not saving "Sender ID" and "Port" in "Network preferences"

M  +6    -5    knotes/noteshared/src/config/notenetworkconfig.cpp

http://commits.kde.org/kdepim/cbfcd564d0500a109140c98c4b430fb81018c759