Fix Bug 371703 - Not saving "Sender ID" and "Port" in "Network preferences"

FIXED-IN: 5.3.3
BUG: 371703